[package]
name = "yardland"
version = "0.1.0"
edition = "2021"
authors = ["Joseph Hans Díaz González <eliotvonecklie@gmail.com>"]
license = "MIT"

[dependencies]
winit = "^0.27"
egui = "^0.19"
egui-winit = "^0.19"
pixels = "0.9.0"
winit_input_helper = "0.13.0"
lazy_static = "1.4.0"
bit_field = "0.10.1"
bitflags = "1.3.2"

[dev-dependencies]
criterion = "^0.4"
